[gd_scene load_steps=13 format=3 uid="uid://di3e157si0aml"]

[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_4evl0"]
[ext_resource type="Texture2D" uid="uid://dcpbk3aw63wwd" path="res://sprites/characters/slime.png" id="1_58gdh"]
[ext_resource type="PackedScene" uid="uid://b2bbqsupkofay" path="res://components/health.tscn" id="2_gf5id"]
[ext_resource type="Material" uid="uid://cch67thbogo84" path="res://scenes/hitflash_white.tres" id="2_pwp8k"]
[ext_resource type="PackedScene" uid="uid://b0b4gbccvg402" path="res://components/attack.tscn" id="3_03npj"]
[ext_resource type="PackedScene" uid="uid://b2wsdhsoe7k5s" path="res://components/hitbox.tscn" id="4_p8lk1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjfgb"]
radius = 7.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5uxlw"]
atlas = ExtResource("1_58gdh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqp2k"]
atlas = ExtResource("1_58gdh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rn44"]
atlas = ExtResource("1_58gdh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m73hr"]
atlas = ExtResource("1_58gdh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q41w4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uxlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqp2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rn44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m73hr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="Node2D" groups=["Enemy"]]
script = ExtResource("1_4evl0")

[node name="Collider" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource("CapsuleShape2D_xjfgb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Collider"]
material = ExtResource("2_pwp8k")
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_q41w4")
frame_progress = 0.167231

[node name="Health" parent="Collider" instance=ExtResource("2_gf5id")]
MAX_HEALTH = 3

[node name="Attack" parent="Collider" instance=ExtResource("3_03npj")]

[node name="Hitbox" parent="Collider" instance=ExtResource("4_p8lk1")]
collision_layer = 2
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider/Hitbox"]
shape = SubResource("CapsuleShape2D_xjfgb")

[node name="FlashTimer" type="Timer" parent="Collider"]
wait_time = 0.05

[node name="FlashLengthTimer" type="Timer" parent="Collider"]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="Collider/FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="Collider/FlashLengthTimer" to="." method="_on_flash_length_timer_timeout"]
